test/netlist/error/duplicated-output.bop
A(a) = (b, b)
where
  b = id(a);
end where;
